0.3 -
	new flymake configuration with epy-setup-checker
	datetime django snippet renamed to dtime

0.2 - not tracked