@@ -8,4 +8,8 @@
 
 ; Ctrl+tab mapped to Alt+tab
 (define-key function-key-map [(control tab)] [?\M-\t])
- (provide 'epy-bindings)
+
+(global-set-key [f10] 'flymake-goto-prev-error)
+(global-set-key [f11] 'flymake-goto-next-error)
+
+(provide 'epy-bindings)
